--- a/dm_control/.vscode/settings.json
+++ b/dm_control/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/yosider/.pyenv/shims/python"
+    "python.pythonPath": "/home/a-yoshida/.pyenv/versions/3.6.7/bin/python"
 }
